src/objects/PpiSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>AgeApiName__c</fullName>
        <description>API name for the field (can be via a valid relationship) that the Age value is stored</description>
        <label>Age Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenderApiName__c</fullName>
        <description>API name for the field (can be via a valid relationship) that the Gender value is stored</description>
        <label>Gender Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdSizeApiName__c</fullName>
        <description>API name for the field (can be via a valid relationship) that the Household size value is stored</description>
        <label>Household Size Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JoinedDateApiName__c</fullName>
        <description>API name for the field (can be via a valid relationship) that the joined date value is stored</description>
        <label>Joined Date Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <description>The api name of the object that the demographic data can be drawn from</description>
        <label>Object Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectIdApiName__c</fullName>
        <description>Id of the object that the demographic data can be drawn from</description>
        <label>Object Id Api Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <label>PPI Settings</label>
</CustomObject>